syntax = "proto3";

package api.user.types;

option go_package = "store/api/user/types;typepb";


message Settings {
  message Model {
    string icon = 1;
    string name = 2;
  }

  message Member {
    bool on = 1;
  }

  message Banner {
    string image_url = 1;
    string link = 2;
    string id = 3;
  }

  repeated Model models = 1;
  Member member = 2;
  Banner banner = 3;
}


